Trying To Fix = Find Stuff to add Dark mode Permently

--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ div.desc {
     border: 1px solid #ccc;
     float: left;
     width: 250px;
-    color: black;
+    color: red;
     text-decoration: none;
 }
 
